--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <body>
 
     <div class="box">
-      <div class="item">One</div>
+      <div class="item item1">One</div>
       <div class="item">Two</div>
       <div class="item">Three
         <br>has
         <br>extra
         <br>text
       </div>
+      <!--
+      <div class="item">Four</div>
+      <div class="item">Five</div>
+        -->
     </div>
 
     <script type="text/javascript" charset="utf-8">
